# game_learning

./: .clang-format  .gitignore  LICENSE  README.md
cmake/: CMakeLists.txt
conan/: conanfile.py
src/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Paddle.cpp  Paddle.h  Player.cpp  Player.h  main.cpp
src/Engine/: ResourceManager.cpp  ResourceManager.h
src/Engine/Graphics/: Texture2D.cpp  Texture2D.h
src/Engine/Math/: Vector2.cpp
src/Math/: Vector2.h
